@@ -1,3 +1,7 @@
+Mon Feb 17 23:28:55 GMT 2003  Colin Watson  <cjwatson@debian.org>
+
+	* src/manpath.c: Remove unused prototypes.
+
 Tue Jan 21 01:42:16 GMT 2003  Colin Watson  <cjwatson@debian.org>
 
 	* src/mandb.c (xcopy, main): Minor whitespace cleanups.
